fix modal z-index

--- a/src/components/Modal/style.modal.scss
+++ b/src/components/Modal/style.modal.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+  z-index: 100;
 
   .modal-main {
     position: fixed;
